Major update: - Added pre-commit - Updated line-trace tests - Minor refactoring trace colors

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -19,8 +19,6 @@ addopts =
     --verbose
 
 norecursedirs =
-    inputs*
-    Results
     htmlcov
     logs
     docs
@@ -31,13 +29,16 @@ testpaths =
 
 console_output_style = progress
 
-; capture = tee-sys
 
 log_level = DEBUG
 log_cli = True
 log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 
+show-capture = yes
+capture = tee-sys
+capture = sys
+capture=fd
+
 junit_logging = system-out
 junit_family = xunit2
-
