--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,12 @@ python_requires = >=3.9
 
 [options.packages.find]
 where = calltraces
+
+[flake8]
+max-complexity=10
+# Recommend matching the black line length (default 88),
+# rather than using the flake8 default of 79:
+max-line-length = 88
+extend-ignore =
+    # See https://github.com/PyCQA/pycodestyle/issues/373
+    E203,
