--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,11 +27,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install black pytest
-        if [ -f requirements.txt ]; then pip install --requirement requirements.txt; fi
+        conda env update --file environment.yml --name base
+
+    - uses: pre-commit/action@v3.0.0
 
     - name: Lint with flake8
       run: |
