--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,10 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # Update Conda
+        conda update -n base -c defaults conda
+
+        # Update Conda packages
         conda env update --file environment.yml --name base
 
     - uses: pre-commit/action@v3.0.0
