Move the pytest config files to repo root

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,7 +10,7 @@
 minversion = 6.0
 addopts =
     --import-mode=prepend
-    --cov-config=./tests/coverage.ini
+    --cov-config=coverage.ini
     --cov-report=html
     --cov-report=xml
     --cov-report=annotate
@@ -25,7 +25,7 @@ norecursedirs =
     .vscode
 
 testpaths =
-    *tests*
+    tests
 
 console_output_style = progress
 
@@ -34,11 +34,6 @@ log_level = DEBUG
 log_cli = True
 log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
-
-show-capture = yes
-capture = tee-sys
-capture = sys
-capture=fd
 
 junit_logging = system-out
 junit_family = xunit2
