--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -57,3 +57,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+    - name: Publish distribution 📦 to Test PyPI
+      uses: pypa/gh-action-pypi-publish@master
+      with:
+        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
