Updated GitHub actions

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,17 +22,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }} 🐍
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Add conda to system path
+    - name: Add conda to system path ➡️
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
 
-    - name: Install dependencies
+    - name: Install dependencies ⬇️
       run: |
         # Update Conda
         conda update -n base -c defaults conda
@@ -40,23 +40,27 @@ jobs:
         # Update Conda packages
         conda env update --file environment.yml --name base
 
-    - uses: pre-commit/action@v3.0.0
+    - uses: pre-commit/action@v3.0.0 ✔️
 
-    - name: Lint with flake8
+    - name: Lint with flake8 📐
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings
         flake8 . --count --exit-zero --statistics
 
-    - name: Lint with Black
+    - name: Lint with Black 📐
       run: |
         # stop the build if there are Python issues with Black
         python -m black --check .
 
-    - name: Test with pytest
+    - name: Test with pytest 🧪
       run: |
         pytest
+
+    - name: Build a binary wheel and a source tarball 🚧
+      run: >-
+        python -m build --sdist --wheel --outdir dist/ .
 
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
