--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -68,7 +68,7 @@ jobs:
         echo "PACKAGE_LONG_VERSION::$(date +'%-Y.%-m.%-d.%-H%-M')" >> $GITHUB_ENV
 
     - name: Build a binary wheel and a source tarball 🚧
-      if: ${{ matrix.python-version == $PYTHON_VERSION_FOR_PUBLISH }}
+      if: ${{ matrix.python-version == env.PYTHON_VERSION_FOR_PUBLISH }}
       run: |
         # Create temp file to store HTTP data
         TMPFILE=$(mktemp)
@@ -98,7 +98,7 @@ jobs:
 
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@master
-      if: ${{ matrix.python-version == $PYTHON_VERSION_FOR_PUBLISH }}
+      if: ${{ matrix.python-version == env.PYTHON_VERSION_FOR_PUBLISH }}
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
