--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "colorama"
+    "colorama",
+    "requests>=2.27.0"
 ]
 build-backend = "setuptools.build_meta"
