Installed build module

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,6 +41,9 @@ jobs:
         # Update Conda packages
         conda env update --file environment.yml --name base
 
+        # Install Build module
+        pip install build
+
     - name: Run pre-commit checks ✔️
       uses: pre-commit/action@v3.0.0
 
