--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,44 +21,6 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python ${{ matrix.python-version }} 🐍
-      uses: actions/setup-python@v3
+    - uses: .github/actions/run-python-tests.yaml@v1
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Add conda to system path ➡️
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-
-    - name: Install dependencies ⬇️
-      run: |
-        # Update Conda
-        conda update -n base -c defaults conda
-
-        # Update Conda packages
-        conda env update --file environment.yml --name base
-
-        # Install Build module
-        pip install build
-
-    - name: Run pre-commit checks ✔️
-      uses: pre-commit/action@v3.0.0
-
-    - name: Lint with flake8 📐
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --statistics
-
-    - name: Lint with Black 📐
-      run: |
-        # stop the build if there are Python issues with Black
-        python -m black --check .
-
-    - name: Test with pytest 🧪
-      run: |
-        python -m pytest
