--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,6 +21,6 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: .github/actions/run-python-tests.yaml@v1
+    - uses: .github/actions/run-python-tests@v1
       with:
         python-version: ${{ matrix.python-version }}
