--- a/.github/actions/run-python-tests/action.yaml
+++ b/.github/actions/run-python-tests/action.yaml
@@ -18,11 +18,13 @@ runs:
       python-version: ${{ inputs.python-version }}
 
   - name: Add conda to system path ➡️
+    shell: bash
     run: |
       # $CONDA is an environment variable pointing to the root of the miniconda directory
       echo $CONDA/bin >> $GITHUB_PATH
 
   - name: Install dependencies ⬇️
+    shell: bash
     run: |
       # Update Conda
       conda update -n base -c defaults conda
@@ -33,6 +35,7 @@ runs:
     uses: pre-commit/action@v3.0.0
 
   - name: Lint with flake8 📐
+    shell: bash
     run: |
       # stop the build if there are Python syntax errors or undefined names
       flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -40,10 +43,12 @@ runs:
       flake8 . --count --exit-zero --statistics
 
   - name: Lint with Black 📐
+    shell: bash
     run: |
       # stop the build if there are Python issues with Black
       python -m black --check .
 
   - name: Test with pytest 🧪
+    shell: bash
     run: |
       python -m pytest
