--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -12,17 +12,16 @@ env:
 
 jobs:
 
-  # Re-use python-package.yaml workflow to run checks and test cases
-  call-python-package:
-    uses: ./.github/workflows/python-package.yml
-
   deploy:
 
     runs-on: ubuntu-latest
 
-    needs: call-python-package
-
     steps:
+    - uses: actions/checkout@v3
+
+    - uses: ./.github/actions/run-python-tests
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Build a binary wheel and a source tarball for test.pypi.org 🚧
       run: |
