--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -28,19 +28,26 @@ steps:
 - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
   displayName: Add conda to system path ➡️
 
+  # https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/anaconda
 - script: |
     # Update Conda
     conda update -n base -c defaults conda
     # Update Conda packages
-    conda env update --file environment.yml --name base
+    conda create --name calltraces --quiet --file environment.yml --yes --quiet
   displayName: Add conda to system path ➡️
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # Run pre-commit checks
     pre-commit run --all-files
   displayName: Run pre-commit checks ✔️
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python syntax errors or undefined names
     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     # exit-zero treats all errors as warnings
@@ -48,11 +55,17 @@ steps:
   displayName: Lint with flake8 📐
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python issues with Black
     python -m black --check .
   displayName: Lint with Black 📐
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python issues with Black
     pytest --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml
   displayName: Test with pytest 🧪
