--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -23,50 +23,66 @@ steps:
 - task: UsePythonVersion@0
   inputs:
     versionSpec: $(python.version)
-  displayName: Use Python $(python.version) 🐍
+  displayName: 🐍 Use Python $(python.version)
 
 - powershell: Write-Host "##vso[task.prependpath]$env:CONDA\Scripts"
-  displayName: Add conda to system path ➡️
+  displayName: ➡️ Add conda to system path
 
   # https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/anaconda
 - script: |
     # Update Conda
     conda update --name base --channel defaults conda --yes --verbose
+  displayName: 🐍 Update Conda
+
+  # https://docs.microsoft.com/en-us/azure/devops/pipelines/ecosystems/anaconda
+- script: |
     # Update Conda packages
-    conda env update --name base --quiet --file environment.yml --verbose
-  displayName: Install dependencies ⬇️
+    conda create --name calltraces --file environment.yml --yes --verbose --force
+  displayName: ⬇️ Install dependencies
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # Run pre-commit checks
     pre-commit run --all-files
-  displayName: Run pre-commit checks ✔️
+  displayName: ✔️ Run pre-commit checks
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python syntax errors or undefined names
     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     # exit-zero treats all errors as warnings
     flake8 . --count --exit-zero --statistics
-  displayName: Lint with flake8 📐
+  displayName: 📐 Lint with flake8
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python issues with Black
     python -m black --check .
-  displayName: Lint with Black 📐
+  displayName: 📐 Lint with Black
 
 - script: |
+    # Activate conda environment
+    source activate calltraces
+
     # stop the build if there are Python issues with Black
     pytest --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml
-  displayName: Test with pytest 🧪
+  displayName: 🧪 Test with pytest
 
 - task: PublishTestResults@2
   condition: succeededOrFailed()
   inputs:
     testResultsFiles: '**/test-*.xml'
     testRunTitle: 'Publish test results for Python $(python.version)'
-  displayName: Publish test results ⏫
+  displayName: ⏫ Publish test results
 
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
-  displayName: Publish coverage results ⏫
+  displayName: ⏫ Publish coverage results
