--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -42,6 +42,7 @@ steps:
 
 - script: |
     # Activate conda environment
+    conda init bash
     conda activate calltraces
 
     # Install pre-commit
@@ -53,6 +54,7 @@ steps:
 
 - script: |
     # Activate conda environment
+    conda init bash
     conda activate calltraces
 
     # stop the build if there are Python syntax errors or undefined names
@@ -63,6 +65,7 @@ steps:
 
 - script: |
     # Activate conda environment
+    conda init bash
     conda activate calltraces
 
     # stop the build if there are Python issues with Black
@@ -71,6 +74,7 @@ steps:
 
 - script: |
     # Activate conda environment
+    conda init bash
     conda activate calltraces
 
     # stop the build if there are Python issues with Black
