--- a/.azure-pipelines/azure-pipelines.yml
+++ b/.azure-pipelines/azure-pipelines.yml
@@ -42,8 +42,7 @@ steps:
 
 - script: |
     # Activate conda environment
-    conda init bash
-    conda activate calltraces
+    call activate calltraces
 
     # Install pre-commit
     pre-commit install
@@ -54,8 +53,7 @@ steps:
 
 - script: |
     # Activate conda environment
-    conda init bash
-    conda activate calltraces
+    call activate calltraces
 
     # stop the build if there are Python syntax errors or undefined names
     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -65,8 +63,7 @@ steps:
 
 - script: |
     # Activate conda environment
-    conda init bash
-    conda activate calltraces
+    call activate calltraces
 
     # stop the build if there are Python issues with Black
     python -m black --check .
@@ -74,8 +71,7 @@ steps:
 
 - script: |
     # Activate conda environment
-    conda init bash
-    conda activate calltraces
+    call activate calltraces
 
     # stop the build if there are Python issues with Black
     pytest --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml
