Minor fix to versioneer style

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ extend-ignore =
 # resulting files.
 [versioneer]
 VCS = git
-style = pep440
+style = git-describe
 versionfile_source = calltraces/_version.py
 versionfile_build = calltraces/_version.py
 tag_prefix = v
