--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,28 @@
 [build-system]
 requires = [
     "setuptools>=62.6.0",
-    "requests>=2.27.0",
-    "versioneer>=0.22"
+    "wheel"
 ]
+
 build-backend = "setuptools.build_meta"
+[tool.black]
+target-version = ['py38', 'py39']
+exclude = '''
+(
+    asv_bench/env
+  | \.egg
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.nox
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | setup.py
+  | versioneer.py
+  | calltraces/_version.py
+)
+'''
