--- a/setup.cfg
+++ b/setup.cfg
@@ -6,21 +6,41 @@ description = A small package for tracing function calls
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/righteouslabs/calltraces
+keywords = calltraces, call, traces, stack, frames
 project_urls =
+    Source Code = https://github.com/righteouslabs/calltraces
     Bug Tracker = https://github.com/righteouslabs/calltraces/issues
 classifiers =
-    Programming Language :: Python :: 3
+    # How mature is this project? Common values are
+    #   3 - Alpha
+    #   4 - Beta
+    #   5 - Production/Stable
+    Development Status :: 5 - Stable",
+    # Indicate who your project is intended for
+    Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    Operating System :: OS Independent",
+    # Specify the Python versions you support here. In particular, ensure
+    # that you indicate you support Python 3. These classifiers are *not*
+    # checked by 'pip install'. See instead 'python_requires' below.
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3 :: Only
 
 [options]
-package_dir =
-    = calltraces
 packages = find:
 python_requires = >=3.9
+install_requires =
+    colorama>=0.4.4
+include_package_data = True
+zip_safe = True
 
 [options.packages.find]
-where = calltraces
+where = .
+exclude =
+    tests,
 
 [flake8]
 max-complexity=10
