--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 [tool.black]
 target-version = ['py38', 'py39']
-exclude = '''
+force-exclude = '''
 (
     asv_bench/env
   | \.egg
